@@ -46,16 +46,16 @@ static const char *logview_about_documenters[] = {
 };
 
 static const char * logview_about_license[] = {
-  N_("Log Viewer is free software; you can redistribute it and/or modify "
+  N_("This program is free software; you can redistribute it and/or modify "
      "it under the terms of the GNU General Public License as published by "
      "the Free Software Foundation; either version 2 of the License, or "
      "(at your option) any later version."),
-  N_("Log Viewer is distributed in the hope that it will be useful, "
+  N_("This program is distributed in the hope that it will be useful, "
      "but WITHOUT ANY WARRANTY; without even the implied warranty of "
      "MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the "
      "GNU General Public License for more details."),
   N_("You should have received a copy of the GNU General Public License "
-     "along with the Log Viewer; if not, write to the Free Software Foundation, Inc., "
+     "along with this program; if not, write to the Free Software Foundation, Inc., "
      "51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA")
 };
 
