@@ -1,5 +1,11 @@
 2009-04-02  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* logview-about.h: simplify a bit the licence making it easier
+	to share a translation with the other gnome-utils apps.
+	Patch by Gabor Kelemen (#577722).
+
+2009-04-02  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* logview-main.c (create_option_context): translate the short
 	description message.
 	Patch by Gabor Kelemen (#577718).
